# 2025-wmaps

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: main.cpp
src/algorithms/: Dijkstra.h
src/datastructures/: Heap.h
src/datastructures/graph/: Graph.h
src/datastructures/graph/attributes/: AbstractAttribute.h  DistanceAttribute.h  EdgeIdAttribute.h  LatLongNodeAttribute.h  OSMNodeIdAttribute.h  TravelTimeAttribute.h  VertexIdAttribute.h
src/tools/: Constants.h
src/utils/build_input_graph/: BuildInputGraph.cpp
utils/build_input_graph/: BuildInputGraph.cpp
